start gui. fix scrollbar bug

--- a/res/main.css
+++ b/res/main.css
@@ -1,3 +1,4 @@
+html,body{ height:100%; }
 body {
 	margin: 0;
 	padding: 0;
@@ -6,6 +7,10 @@ body {
 
 #board {
 	overflow: hidden;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
 }
 
 #watch {
@@ -17,6 +22,17 @@ body {
 	left: 0;
 	color: #999;
 	font-family: monospace;
+}
+
+#gui {
+	background-color: rgba(0,0,0,0.5);
+	width: 240px;
+	height: 40px;
+	font-size: 10pt;
+	position:absolute;
+	left: 50%;
+	bottom: 0;
+	color: #999;
 }
 
 #blocker {
